tests/resource/valid/definition/ternary.mamba
if True then
    print(10)
else
    print(20)

def a := if False then 20 else 30
