tests/resource/invalid/type/control_flow/variable_defined_in_else.mamba
if False then
    print("something")
else
    def x := 10

x + 10
